--- a/app/views/socks/index.html.erb
+++ b/app/views/socks/index.html.erb
@@ -5,7 +5,6 @@
   <p><%= " Price: #{sock.price}" %></p>
   <p><%= "Description: #{sock.description}" %></p>
   <p><%= "Size: #{sock.size}" %></p>
-  <a href="/sock/<%=sock.id%>">More info</a>   
+  <a href="/socks/<%=sock.id%>">More info</a>   
 <% end %>
-
 
