added edit form

--- a/app/views/socks/show.html.erb
+++ b/app/views/socks/show.html.erb
@@ -4,3 +4,4 @@
 <p><%= image_tag @sock.image %></p>
 <p><%= @sock.size %></p>
 <a href = "/socks"> Back to all socks! </a>
+<a href = "/socks/<%=@sock.id%>/edit"> Edit this sock! </a>
