--- a/app/views/socks/new.html.erb
+++ b/app/views/socks/new.html.erb
@@ -4,23 +4,23 @@
 <%= form_tag '/socks', method: :post do %>
   <div>
     <%= label_tag :name %>
-    <%= text_field_tag :name %>
+    <%= text_field_tag :name, '', class: 'form-control' %>
   </div>
   <div>
     <%= label_tag :price %>
-    <%= text_field_tag :price %>
+    <%= text_field_tag :price, '', class: 'form-control' %>
   </div>
    <div>
     <%= label_tag :size %>
-    <%= text_field_tag :size %>
+    <%= text_field_tag :size, '', class: 'form-control' %>
   </div>
      <div>
     <%= label_tag :description%>
-    <%= text_field_tag :description %>
+    <%= text_field_tag :description, '', class: 'form-control' %>
   </div>
      <div>
     <%= label_tag :image_url %>
-    <%= text_field_tag :image %>
+    <%= text_field_tag :image, '', class: 'form-control' %>
   </div>
   <div>
   <%= submit_tag 'Submit sock' %>
