--- a/app/views/socks/edit.html.erb
+++ b/app/views/socks/edit.html.erb
@@ -1,5 +1,5 @@
 <h1>Which sock would you like to edit?</h1>
-<%= form_tag "/socks/#{@sock.id}/edit", method: :patch do %>
+<%= form_tag "/socks/#{@sock.id}", method: :patch do %>
   <div>
     <%= label_tag :name %>
     <%= text_field_tag :name, @sock.name, class: 'form-control' %>
