--- a/app/views/socks/new.html.erb
+++ b/app/views/socks/new.html.erb
@@ -1,4 +1,5 @@
 <h1>Have a sock you want to add?</h1>
+<a href="/socks">Back to all socks</a>
 <h2>Describe it below in the form and we will try to find one for you!</h2>
 
 <%= form_tag '/socks', method: :post do %>
