added flash message

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -8,6 +8,9 @@
 </head>
 <body>
 <div class = "container">
+  <% flash.each do |name, message| %>
+    <p> <%= message %> </p>
+  <% end %>
 <%= yield %>
 </div>
 
