--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,10 @@
 <body>
 <div class = "container">
   <% flash.each do |name, message| %>
-    <p> <%= message %> </p>
+    <div class= "alert alert-<%=name%> alert-dismissible fade in" role="alert">
+     <button type="button" class="close" data-dismiss="alert" aria-label="Close">&times;</span><span class="sr-only">Close</span></button>
+     <%= message.html_safe %>
+      </div>
   <% end %>
 <%= yield %>
 </div>
