--- a/app/views/socks/index.html.erb
+++ b/app/views/socks/index.html.erb
@@ -1,31 +1,15 @@
-
-<nav class="navbar navbar-default" role="navigation">
-  <!-- We use the fluid option here to avoid overriding the fixed width of a normal container within the narrow content columns. -->
-  <div class="container-fluid">
-    <div class="navbar-header">
-      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-6">
-        <span class="sr-only">Toggle navigation</span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-        <span class="icon-bar"></span>
-      </button>
-    </div>
-
-    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-6">
-      <ul class="nav navbar-nav">
-        <li class="active"><a href="/socks">All Socks!</a></li>
-        <li><a href="/socks/new">Add a new sock!</a></li>
-      </ul>
-    </div><!-- /.navbar-collapse -->
-  </div>
-</nav>
-
 <h1>Socks!</h1>
+<div class= "row">
 <% @socks.each do |sock| %>
+<div class="col-md-4">
+<div class="well">
   <p><%= sock.name %></p>
   <p><%= image_tag sock.image %></p>
   <p><%= " Price: #{sock.price}" %></p>
   <p><%= "Description: #{sock.description}" %></p>
   <p><%= "Size: #{sock.size}" %></p>
   <a href="/socks/<%=sock.id%>">More info</a>   
+  </div>
+  </div>
 <% end %>
+</div>
