--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,7 +24,9 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/socks/new">Add a sock!<span class="sr-only">(current)</span></a></li>
-        <li><a href="#">Edit a sock!</a></li>
+        <% if @sock %>
+          <li><a href="/socks/<%=@sock.id%>/edit">Edit a sock!</a></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
