made individual show page centered and added html and css styling

--- a/app/assets/stylesheets/socks.scss
+++ b/app/assets/stylesheets/socks.scss
@@ -15,3 +15,13 @@ body {
 .well img {
   width: 100%;
 }
+#showPage {
+margin: 0 auto;
+width: 70%;
+text-align: center;
+img{
+  display: block;
+    margin: auto;
+    width: 30%;
+}
+}
