--- a/app/views/socks/show.html.erb
+++ b/app/views/socks/show.html.erb
@@ -1,4 +1,5 @@
 <h1><%= @sock.description %></h1>
+<div class="well" id ="showPage">
 <p><%= @sock.name %></p>
 <p>Price: <%= @sock.price %></p>
 <p>Tax: <%= @sock.tax %></p>
@@ -11,4 +12,6 @@
 <div>
 
   <%= link_to "Delete this sock", "/socks/#{@sock.id}", method: :delete %>
+</div>
+
   </div>
