--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -30,11 +30,11 @@
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
-            <li><a href="/socks?sort=price">Sort by price</a></li>
-            <li><a href="/socks?sort=name">Sort by name</a></li>
-            <li><a href="#">Something else here</a></li>
+            <li><a href="/socks?sort=price&order=ascending">Sort by price, low to high</a></li>
+            <li><a href="/socks?sort=price&order=descending">Sort by price, high to low</a></li>
+            <li><a href="/socks?discount=true">Discount Items</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="/socks/<%= Sock.all.sample.id%>">Random Item!</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
