--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -34,18 +34,24 @@
             <li><a href="/socks?sort=price&order=descending">Sort by price, high to low</a></li>
             <li><a href="/socks?discount=true">Discount Items</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="/socks/<%= Sock.all.sample.id%>">Random Item!</a></li>
+            <li><a href="/socks/random">Random Item!</a></li>
             <li role="separator" class="divider"></li>
             <li><a href="#">One more separated link</a></li>
           </ul>
         </li>
       </ul>
-      <form class="navbar-form navbar-left" role="search">
+      <!-- <form class="navbar-form navbar-left" role="search">
         <div class="form-group">
           <input type="text" class="form-control" placeholder="Search">
         </div>
         <button type="submit" class="btn btn-default">Submit</button>
-      </form>
+      </form> -->
+      <%= form_tag "/socks", method: :get, class: "navbar-form navbar-left" do %>
+      <div class ="form-group">
+      <%= text_field_tag :search_terms, '', class: "form-control", placeholder: "Search"%>
+      </div>
+      <%= submit_tag "Submit", class: "btn btn-default" %>
+      <% end %>
       <ul class="nav navbar-nav navbar-right">
         <li><a href="#">Link</a></li>
         <li class="dropdown">
