--- a/app/views/socks/new.html.erb
+++ b/app/views/socks/new.html.erb
@@ -25,6 +25,10 @@
     <%= text_field_tag :image, '', class: 'form-control' %>
   </div>
   <div>
+    <%= label_tag :image_url %>
+    <%= text_field_tag :image, '', class: 'form-control' %>
+  </div>
+  <div>
   <%= submit_tag 'Submit sock' %>
   </div>
   <% end %>
