Added category link

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -36,7 +36,7 @@
             <li role="separator" class="divider"></li>
             <li><a href="/socks/random">Random Item!</a></li>
             <li role="separator" class="divider"></li>
-            <li><a href="#">One more separated link</a></li>
+            <li><a href="/socks?category=Athletic">Athletic Socks</a></li>
           </ul>
         </li>
       </ul>
