--- a/app/views/socks/new.html.erb
+++ b/app/views/socks/new.html.erb
@@ -22,11 +22,7 @@
   </div>
      <div>
     <%= label_tag :image_url %>
-    <%= text_field_tag :image, '', class: 'form-control' %>
-  </div>
-  <div>
-    <%= label_tag :image_url %>
-    <%= text_field_tag :image, '', class: 'form-control' %>
+    <%= text_field_tag :image_url, '', class: 'form-control' %>
   </div>
   <div>
   <%= submit_tag 'Submit sock' %>
