--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -55,7 +55,16 @@
       <%= submit_tag "Submit", class: "btn btn-default" %>
       <% end %>
       <ul class="nav navbar-nav navbar-right">
-        <li><a href="#">Link</a></li>
+      <% if current_user %>
+      <% CartedProduct.where(status: "carted", user_id: current_user.id).count > 0 %>
+        <li>
+        <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true">
+        <a href="/carted_products">Shopping Cart(<%=@cart_count%>)</a>
+        </span>
+        </li>
+        <% else %>
+        <li><a href="/">Shopping Cart</a></li>
+        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -66,7 +75,7 @@
             <li><a href="/login">Log In</a></li>
             <% end %>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Separated link</a></li>
+            <li><a href="#">Link</a></li>
           </ul>
         </li>
       </ul>
