--- a/app/views/socks/show.html.erb
+++ b/app/views/socks/show.html.erb
@@ -18,27 +18,16 @@
 <% end%>
 <p>Size: <%= @sock.size %></p>
 <a href = "/socks"> Back to all socks! </a>
+<%if current_user && current_user.admin %>
 <a href = "/socks/<%=@sock.id%>/edit"> Edit this sock! </a>
+<% end%>
 </div>
 
 
-  <%= form_tag "/images", method: :post do %>
-  <div>
-    <%= label_tag :url %>
-    <%= text_field_tag :url, '', class: 'form-control' %>
-  </div>
-  <div>
-    <%= label_tag :sock_id %>
-    <%= text_field_tag :sock_id, @sock.id, class: 'form-control' %>
-  </div>
-  <div>
-  <%= submit_tag 'Submit image' %>
-  </div>
-  <% end %>
 
     <%= form_tag "/carted_products", method: :post do %>
   <div>
-  <h3>Buy now!</h3>
+  <h3>Add Product to Cart</h3>
     <%= label_tag :quantity %>
     <%= text_field_tag :quantity, '', class: 'form-control' %>
   </div>
