--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -24,9 +24,6 @@
     <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
       <ul class="nav navbar-nav">
         <li class="active"><a href="/socks/new">Add a sock!<span class="sr-only">(current)</span></a></li>
-        <% if @sock %>
-          <li><a href="/socks/<%=@sock.id%>/edit">Edit a sock!</a></li>
-        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -55,16 +52,6 @@
       <%= submit_tag "Submit", class: "btn btn-default" %>
       <% end %>
       <ul class="nav navbar-nav navbar-right">
-      <% if current_user %>
-      <% CartedProduct.where(status: "carted", user_id: current_user.id).count > 0 %>
-        <li>
-        <span class="glyphicon glyphicon-shopping-cart" aria-hidden="true">
-        <a href="/carted_products">Shopping Cart(<%=@cart_count%>)</a>
-        </span>
-        </li>
-        <% else %>
-        <li><a href="/">Shopping Cart</a></li>
-        <% end %>
         <li class="dropdown">
           <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
           <ul class="dropdown-menu">
@@ -75,7 +62,15 @@
             <li><a href="/login">Log In</a></li>
             <% end %>
             <li role="separator" class="divider"></li>
-            <li><a href="#">Link</a></li>
+              <% if current_user %>
+      <% CartedProduct.where(status: "carted", user_id: current_user.id).count > 0 %>
+        <li>
+        <a href="/carted_products"><span class="glyphicon glyphicon-shopping-cart" aria-hidden="true"></span>
+         Shopping Cart(<%=@cart_count%>)</a>
+        </li>
+        <% else %>
+        <li><a href="/">Shopping Cart</a></li>
+        <% end %>
           </ul>
         </li>
       </ul>
