--- a/app/views/socks/new.html.erb
+++ b/app/views/socks/new.html.erb
@@ -1,29 +1,36 @@
 <h1>Have a sock you want to add?</h1>
 <a href="/socks">Back to all socks</a>
 <h2>Describe it below in the form and we will try to find one for you!</h2>
-
+<% if @sock.errors.any? %>
+              <div id="error_explanation">
+                <h2><%= pluralize(@sock.errors.count, "error") %> prohibited this product from being saved:</h2>
+             
+                <ul>
+                <% @sock.errors.full_messages.each do |msg| %>
+                  <li><%= msg %></li>
+                <% end %>
+                </ul>
+              </div>
+            <% end %>
 <%= form_tag '/socks', method: :post do %>
   <div>
     <%= label_tag :name %>
-    <%= text_field_tag :name, '', class: 'form-control' %>
+    <%= text_field_tag :name, @sock.name , class: 'form-control' %>
   </div>
   <div>
     <%= label_tag :price %>
-    <%= text_field_tag :price, '', class: 'form-control' %>
+    <%= text_field_tag :price, @sock.price , class: 'form-control' %>
   </div>
    <div>
     <%= label_tag :size %>
-    <%= text_field_tag :size, '', class: 'form-control' %>
+    <%= text_field_tag :size, @sock.size, class: 'form-control' %>
   </div>
 
      <div>
     <%= label_tag :description%>
-    <%= text_field_tag :description, '', class: 'form-control' %>
+    <%= text_field_tag :description, @sock.description , class: 'form-control' %>
   </div>
-     <div>
-    <%= label_tag :image_url %>
-    <%= text_field_tag :image_url, '', class: 'form-control' %>
-  </div>
+    
   <div>
   <%= submit_tag 'Submit sock' %>
   </div>
